[project]
name = "quorabroker"
version = "0.1.0"
description = "Kafka topic subscriber service that consumes URL tasks and performs web fetch operations"
readme = "README.md"
requires-python = "==3.13.7"
dependencies = [
	"aiokafka>=0.10.0",
	"motor>=3.6.0",
	"httpx>=0.27.0",
	"pydantic>=2.7.0",
	"structlog>=24.1.0",
	"orjson>=3.10.0",
	"python-dotenv>=1.0.0",
	"beautifulsoup4>=4.12.0"
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
# Placeholder for future uv-specific configuration (indexes, settings, etc.)

[project.optional-dependencies]
browser = [
	"selenium>=4.21.0",
	"webdriver-manager>=4.0.1",
]
dev = [
	"pytest>=8.2.0",
	"pytest-asyncio>=0.23.0",
	"coverage[toml]>=7.5.0",
	"mypy>=1.10.0",
]
all = [
	"quorabroker[browser,dev]",
]

; Ruff configuration removed per user request
